add: setStatus & snapshotDevice commands
